--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
-\documentclass{book}
+%\documentclass{book}
+\documentclass[UTF8]{ctexart}
 \usepackage{titlesec}
 \usepackage{xeCJK}
 %\usepackage{graphicx}
@@ -22,7 +23,8 @@
 \usepackage{indentfirst}
 
 
-\setCJKmainfont{MS Song.ttf}
+
+%\setCJKmainfont{MS Song.ttf}
 
 %\newcommand{\degrees}{\ensuremath{^\circ}}
 
